# grok-web

./: .gitignore  CLAUDE.md  PLAN_1.md  README.md  grok-web.json  start.sh
backend/: pyproject.toml
backend/src/grok_web/: agent.py  config.py  db.py  llm.py  main.py  mcp_client.py  models.py
backend/src/grok_web/routes/: conversations.py  ws.py
backend/src/grok_web/tools/: __init__.py  list_directory.py  read_file.py  run_command.py  search_replace.py  write_file.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: InputPane.tsx  IntermediatePane.tsx  OutputPane.tsx  Sidebar.tsx  ToolCallCard.tsx
frontend/src/stores/: chatStore.ts
